--- a/style.css
+++ b/style.css
@@ -93,17 +93,50 @@ a img {
 	border: 0;
 }
 
+.menucontent {
+	background-color: transparent;
+	width: 100%;
+	height: 80%;
+
+}
+
+#menu img{
+	display: inline;
+	margin: 0;
+	width:10%;
+	height:8%;
+	float:left;
+}
+
 #menu ul {
     list-style-type: none;  
 	font-size: 20px;
 	text-align: center;
+	background-color: black;
+	padding: 45px;
 } 
-#menu ul li { 
+
+#menu ul li {
+	display: inline;
+	margin:5px;
+}
+
+#menu ul li  img{ 
     display: inline;  
     margin: 0;  
 }
+
 #menu ul li a {  
     font-family: Century Gothic, Arial;  
-    color: black;
+    color: white;
 	text-decoration: none;
 	padding: 0 20px;
+}
+
+h1 {
+	font-family: Century Gothic, Arial; 
+	font-size: 30px;
+    color: black;
+	text-align: center;
+	text-decoration: none;
+}
